--- a/ATV_models/UPDATED_polaris_ranger_xp900_no_roll_cage/model.config
+++ b/ATV_models/UPDATED_polaris_ranger_xp900_no_roll_cage/model.config
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <model>
-  <name>Polaris Ranger XP900</name>
+  <name>Polaris Ranger XP900 without roll cage</name>
   <version>1.0</version>
   <sdf version="1.4">model-1_4.sdf</sdf>
   <sdf version="1.5">model.sdf</sdf>
@@ -17,7 +17,7 @@
   </author>
 
   <description>
-    A model of the Polaris Ranger XP900.
+    A model of the Polaris Ranger XP900 without roll cage.
   </description>
 
 </model>
