--- a/ATV_ws/src/ATV_control/config/ATV_control.yaml
+++ b/ATV_ws/src/ATV_control/config/ATV_control.yaml
@@ -7,21 +7,21 @@ ATV:
   # Position Controllers --------------------------------------- (used to change orientation of front wheels)  = STEERING 
   FR_wheel_position_controller:
     type: effort_controllers/JointPositionController
-    joint: fr_steering_joint
+    joint: right_steering_joint
     pid: {p: 1000.0, i: 100.0, d: 10.0}
 
   FL_wheel_position_controller:
     type: effort_controllers/JointPositionController
-    joint: fl_steering_joint
+    joint: left_steering_joint
     pid: {p: 1000.0, i: 100.0, d: 10.0}
 
  # Velocity Controllers --------------------------------------- (used for forward/backword rotation of rear wheels)  =  MOVING
   RR_wheel_velocity_controller:
     type: effort_controllers/JointVelocityController
-    joint: rr_joint
+    joint: right_rear_axle
     pid: {p: 1000.0, i: 100.0, d: 10.0}
 
   RL_wheel_velocity_controller:
     type: effort_controllers/JointVelocityController
-    joint: rl_joint
+    joint: left_rear_axle
     pid: {p: 1000.0, i: 100.0, d: 10.0}
