workin incremental steeringgit add .!

--- a/ATV_ws/src/teleop_twist_keyboard/package.xml
+++ b/ATV_ws/src/teleop_twist_keyboard/package.xml
@@ -15,5 +15,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>rospy</run_depend>
-  <run_depend>ATV_control</run_depend>
+  <run_depend>ATV_control</run_depend>  
+  <run_depend>rospy</run_depend>
+
 </package>
