fixed package/manifest files, all good

--- a/ATV_ws/src/ATV_description/package.xml
+++ b/ATV_ws/src/ATV_description/package.xml
@@ -34,7 +34,7 @@
 
 </package>-->
 <package format="2">
-  <name>ATV_control</name>
+  <name>ATV_description</name>
   <version>0.0.0</version>
   <description>The vmc_project package</description>
   <!--  One maintainer tag required, multiple allowed, one person per tag  -->
