--- a/ATV_ws/src/ATV_control/CMakeLists.txt
+++ b/ATV_ws/src/ATV_control/CMakeLists.txt
@@ -47,12 +47,12 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-add_message_files(
-  FILES
-  Steer.msg
+#add_message_files(
+#  FILES
+#  Steer.msg
 #   Message1.msg
 #   Message2.msg
-)
+#)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -69,12 +69,12 @@ add_message_files(
 # )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-  DEPENDENCIES
-  std_msgs
-  
-  #Floats
-)
+#generate_messages(
+#  DEPENDENCIES
+#  std_msgs
+#  
+#  #Floats
+#)
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
