--- a/ATV_ws/src/ATV_gazebo/package.xml
+++ b/ATV_ws/src/ATV_gazebo/package.xml
@@ -1,40 +1,5 @@
-<!--<package>
-  <description brief="control">
-
-     control
-
-  </description>
-  <author>agtek</author>
-  <license>BSD</license>
-  <review status="unreviewed" notes=""/>
-  <url>http://ros.org/wiki/control</url>
-  <depend package="roscpp"/>
-  <depend package="rospy"/>
-  <depend package="geometry_msgs"/>
-  <depend package="std_msgs"/>
-  <depend package="message_generation"/>
-  <depend package="message_runtime"/>
-
-</package>-->
-
-<!--<package>
-  <description brief="test">
-
-     test
-
-  </description>
-  <author>agtek</author>
-  <license>BSD</license>
-  <review status="unreviewed" notes=""/>
-  <url>http://ros.org/wiki/test</url>
-  <depend package="rospy"/>
-  <depend package="ATV_control"/>
-  <depend package="message_generation"/>
-  <depend package="message_runtime"/>
-
-</package>-->
 <package format="2">
-  <name>ATV_control</name>
+  <name>ATV_gazebo</name>
   <version>0.0.0</version>
   <description>The vmc_project package</description>
   <!--  One maintainer tag required, multiple allowed, one person per tag  -->
