--- a/ATV_ws/src/ATV_description/CMakeLists.txt
+++ b/ATV_ws/src/ATV_description/CMakeLists.txt
@@ -10,7 +10,7 @@ project(ATV_description)
 find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
-  message_generation
+  gazebo_ros
 )
 
 ## System dependencies are found with CMake's conventions
